给点文字说明...

--- a/index.html
+++ b/index.html
@@ -70,6 +70,12 @@
 — 梦入神机</p>
 </blockquote>
 
+<p>新书最终确定下来了，在1月31号发布。
+新书发布会会同影视公司，咪咕阅读，纵横中文网还有各大平台，在上海波特曼丽思卡尔顿酒店4楼进行发布会，地址在上海市西静安区南京西路1376号。
+开始时间1月31号14点。
+到时候如果方便的书迷可以来玩一玩，会场上可以和我交流交流。
+我在现场还会演练武功，有喜欢看书和喜欢功夫的朋友，欢迎到场。</p>
+
 </div>
 
   </article>
